--- a/src/Components/CommonComponents/recommandation.css
+++ b/src/Components/CommonComponents/recommandation.css
@@ -12,6 +12,7 @@
   
     margin-top: 5%  !important;
   }
+ 
   .Annuu{
 
     display: none !important;
@@ -21,7 +22,8 @@
   }
 
 .createStyleoutline{
-    margin-top: 11px !important;
+    margin-top: 3% !important;
+    margin-left: 37px !important;
 }
 
 .ImageLeftStyle{
